fixed pagination at popup contacts book, and limited to two records visible at once in popup"

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -14,7 +14,7 @@
     align-items: center;
 }
 .dashboard-interface div {
-    margin:  0 5px 5px;
+    margin:  0 5px;
 }
 @media screen and (max-width:600px){
     .dashboard-interface {
